[project]
name = "customer_inquiry_crewai"
version = "0.1.0"
description = "customer_inquiry_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1"
]

[project.scripts]
customer_inquiry_crewai = "customer_inquiry_crewai.main:run"
run_crew = "customer_inquiry_crewai.main:run"
train = "customer_inquiry_crewai.main:train"
replay = "customer_inquiry_crewai.main:replay"
test = "customer_inquiry_crewai.main:test"
run_with_trigger = "customer_inquiry_crewai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
